[package]
name = "embree-rs"
description = "A simple wrapper for embree ray tracing library."
version = "0.2.0"
authors = ["Adrien Gruson <adrien.gruson@gmail.com"]

# These URLs point to more information about the package. These are
# intended to be webviews of the relevant data, not necessarily compatible
# with VCS tools and the like.
repository = "https://github.com/beltegeuse/embree-rs.git"

# This points to a file under the package root (relative to this `Cargo.toml`).
# The contents of this file are stored and indexed in the registry.
# crates.io will render this file and place the result on the crate's page.
readme = "README.md"

# This is a list of up to five keywords that describe this crate. Keywords
# are searchable on crates.io, and you may choose any words that would
# help someone find this crate.
keywords = ["embree", "intersection", "raytracing"]

# This is a list of up to five categories where this crate would fit.
# Categories are a fixed list available at crates.io/category_slugs, and
# they must match exactly.
categories = ["external-ffi-bindings"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can be
# separated with a `/`.
license = "MIT"

[badges]
travis-ci = { repository = "beltegeuse/embree-rs" }
maintenance = { status = "experimental" }

[dependencies]
libc = "0.2"
cgmath = "0.16.1"
clippy = { version = "0.0.189", optional = true }
bitflags = "1.0.1"

[build-dependencies.bindgen]
version = "0.35.0"
features = []
